/  __ \ |         | |
| /  \/ |__   __ _| | _____  _ __ __ _
| |   | '_ \ / _` | |/ / _ \| '__/ _` |
| \__/\ | | | (_| |   < (_) | | | (_| |
 \____/_| |_|\__,_|_|\_\___/|_|  \__,_|

                 CHANGELOG
---------------------------------------

Current
	- InspIRCd: Join after the ircd is done bursting to us
	- InspIRCd: Store TS
	- InspIRCd: Use FJOIN properly
	- All: Fixed a few possible small memory leaks
	- Protocols: Added serv_cmode, for a regular MODE command
	- InspIRCd: m_servprotect is no longer required
	- Module API: Store module author and version for module listing
	- API: Added ctcp_reply
	- Setup: We no longer provide a config generator, we now provide an example config for you to edit