@@ -41,6 +41,9 @@ our %rawcmds = (
 	'PART' => {
 		handler => \&raw_part,
 	},
+	'MODE' => {
+		handler => \&raw_mode,
+	},
 );
 our %PROTO_SETTINGS = (
 	name => 'Charybdis IRCd',
@@ -100,6 +103,8 @@ sub uidInfo {
 		return $uid{$ruid}{'ip'};
 	} elsif ($section == 6) {
 		return $uid{$ruid}{'pnick'};
+	} elsif ($section == 7) {
+		return $uid{$ruid}{'oper'};
 	} else {
 		return 0;
 	}
@@ -270,6 +275,9 @@ sub raw_euid {
 	$uid{$ruid}{'uid'} = $rex[9];
 	$uid{$ruid}{'host'} = $rex[10];
 	$uid{$ruid}{'pnick'} = 0;
+	if ($rex[5] =~ m/o/) {
+		$uid{$ruid}{'oper'} = 1;
+	}
 	event_uid($ruid, $rex[2], $rex[6], $rex[10], $rex[7], $rex[8]);
 	if ($Chakora::IN_DEBUG) { serv_notice('g', $ruid, "Services are in debug mode, be careful when sending messages to services."); }
 }
@@ -296,6 +304,20 @@ sub raw_quit {
         for ($i = 3; $i < count(@rex); $i++) { $args .= ' '.$rex[$i]; }
 	event_quit($ruid, $args);
 	undef $uid{$ruid};
+}
+
+# Handle MODE
+sub raw_mode {
+	my ($raw) = @_;
+	my @rex = split(' ', $raw);
+	if ($uid{$rex[2]}{'oper'} and $rex[3] =~ m/-.o/) {
+		undef $uid{$rex[2]}{'oper'};
+		svsilog('g', $rex[2], 'OPER', "User is no longer an IRC Operator.");
+	}
+	if ($rex[3] =~ m/\+.o/) {
+		$uid{$rex[2]}{'oper'} = 1;
+		svsilog('g', $rex[2], 'OPER', "User is now an IRC Operator.");
+	}
 }
 
 # Handle JOIN
